Fixed the spacing between search and category

--- a/css/style.css
+++ b/css/style.css
@@ -497,4 +497,8 @@ position: absolute;
     font-family: 'Poppins', sans-serif;
   }
 
- 
+ #searchContainer {
+    display: flex;
+    align-items: center;
+    gap: 15px; 
+}
